package com.kco.pattern.facade.demo;

/**
 * Created by Administrator on 2017/5/12.
 */
public class AirCleaner {
    public void on(){
        System.out.println("开空气净化器....");
    }

    public void off(){
        System.out.println("关空气净化器....");
    }
}
