package com.kco.pattern.facade.demo;

/**
 * Created by Administrator on 2017/5/12.
 */
public class AirConditioning {
    public void on(){
        System.out.println("开空调....");
    }

    public void off(){
        System.out.println("关空调....");
    }
}
